AI_AIRCRAFT_MAINTENANCE/kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aircraft-maintenance
spec:
  type: NodePort
  selector:
    app: aircraft-maintenance
  ports:
    - port: 8000
      targetPort: 8000
