AI_AIRCRAFT_MAINTENANCE/kubernetes/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aircraft-maintenance
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aircraft-maintenance
                port:
                  number: 8000
